# docWM

docGen/: .gitignore  README.md  mkdocs.yml  pyproject.toml
docGen/docs/: business-summary.md  index.md
docGen/docs/documents/com/example/docs/: Order.md
docGen/docs/processes/: order-submission.md  synthetic-geographic-address-validation.md
docGen/docs/reports/: summary.md
docGen/docs/services/com/example/billing/: createInvoice.md
docGen/docs/services/com/example/customer/: validateCustomer.md
docGen/docs/services/com/example/order/: submitOrder.md
docGen/docs/services/synthetic/current/: flow_1.md
docGen/examples/: processes.yml
docGen/examples/sample-packages/SampleOrder/: manifest.v3
docGen/examples/sample-packages/SampleOrder/ns/com/example/billing/createInvoice/: node.ndf
docGen/examples/sample-packages/SampleOrder/ns/com/example/customer/validateCustomer/: flow.xml  node.ndf
docGen/examples/sample-packages/SampleOrder/ns/com/example/docs/Order/: node.ndf
docGen/site/: 404.html  index.html
docGen/site/processes/synthetic-geographic-address-validation/: index.html
docGen/site/reports/summary/: index.html
docGen/site/search/: search_index.json
docGen/site/services/synthetic/current/flow_1/: index.html
docGen/src/wm_docgen/: __init__.py  cli.py  diagrams.py  discovery.py  docs.py  flow_parser.py  graph.py  loader.py  models.py  node_parser.py  processes.py  sample_fetcher.py  validation.py  xml_utils.py
docGen/tests/: test_docs_and_cli.py  test_parsing.py
(+2 files in other folders)
